# VMDatomistic

./: MANIFEST.in  README.md  pyproject.toml
examples/: eval-batched.py  eval.py  geo_opt.py
examples/data/: README.md  example_structures.extxyz
src/VMDatomistic/: __init__.py
src/VMDatomistic/calculators/: __init__.py  ase.py
src/VMDatomistic/data/: __init__.py  load.py  transform.py
src/VMDatomistic/models/: __init__.py  load.py
src/VMDatomistic/models/checkpoints/: M3GNet_PBE_r2SCAN_epoch_100.pt
